--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@ aria-label="Make a direct call"
           <div class="custom-contact-form">
             <form action="https://api.web3forms.com/submit" method="POST" id="custom-contact-form">
               <h2>GET A QUOTE <i class="fa fa-building" aria-hidden="true"></i></h2>
-              <input type="hidden" name="access_key" value="4f67a9d4-722c-47ea-8815-34bcc6ae5f0d">
+              <input type="hidden" name="access_key" value="key">
               <div class="custom-input-box">
                 <input type="text" required="true" name="fullname" placeholder="Your Name">
               </div>
