--- a/thankyou.html
+++ b/thankyou.html
@@ -4,7 +4,7 @@
 
 <!-- Event snippet for  conversion page -->
 <script>
-    gtag('event', 'conversion', {'send_to': '4f67a9d4-722c-47ea-8815-34bcc6ae5f0d'});
+    gtag('event', 'conversion', {'send_to': 'key'});
   </script>
   
     <meta charset="UTF-8">
