--- a/404.html
+++ b/404.html
@@ -201,8 +201,8 @@ aria-label="Make a direct call"
         <div class="col-lg-3 col-md-6">
           <h4 class="text-white mb-3">Helpful Links</h4>
           <a class="btn btn-link" href="about.html">About Us</a>
-          <a class="btn btn-link" href="products.html">Products</a>
-          <a class="btn btn-link" href="safety-features.html">Safety Features</a>
+          <a class="btn btn-link" href="Services.html">Services</a>
+          <a class="btn btn-link" href="Lift-Designs.html">Lift Designs</a>
           <a class="btn btn-link" href="contact.html">Contact Us</a>
         </div>
   
