--- a/contact.html
+++ b/contact.html
@@ -247,13 +247,13 @@ aria-label="Make a direct call"
    <div class="container py-5">
      <div class="row g-5">
        <!-- Helpful Links -->
-       <div class="col-lg-3 col-md-6">
-         <h4 class="text-white mb-3">Helpful Links</h4>
-         <a class="btn btn-link" href="about.html">About Us</a>
-         <a class="btn btn-link" href="products.html">Products</a>
-         <a class="btn btn-link" href="safety-features.html">Safety Features</a>
-         <a class="btn btn-link" href="contact.html">Contact Us</a>
-       </div>
+        <div class="col-lg-3 col-md-6">
+          <h4 class="text-white mb-3">Helpful Links</h4>
+          <a class="btn btn-link" href="about.html">About Us</a>
+          <a class="btn btn-link" href="Services.html">Services</a>
+          <a class="btn btn-link" href="Lift-Designs.html">Lift Designs</a>
+          <a class="btn btn-link" href="contact.html">Contact Us</a>
+        </div>
  
        <!-- Contact Information -->
        <div class="col-lg-3 col-md-6">
