--- a/Services.html
+++ b/Services.html
@@ -6,12 +6,12 @@
 
     <!-- Character Encoding and Viewport -->
     <meta charset="utf-8" />
-    <title>SRI SAI ELEVATOR - Safe and Reliable Elevator Solutions</title>
+    <title>SRI SAI ELEVATORS - Safe and Reliable Elevator Solutions</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
     <!-- Meta Keywords and Description -->
     <meta content="elevator solutions, hospital elevators, goods elevators, passenger elevators, elevator safety features, custom elevator designs, elevator installation, elevator maintenance, Chittoor elevators" name="keywords" />
-    <meta content="SRI SAI ELEVATOR provides comprehensive vertical movement solutions with advanced safety features and custom designs. We specialize in passenger, hospital, and goods elevators." name="description" />
+    <meta content="SRI SAI ELEVATORS provides comprehensive vertical movement solutions with advanced safety features and custom designs. We specialize in passenger, hospital, and goods elevators." name="description" />
 
     <!-- Favicon -->
     <link rel="icon" href="img/logo/sri-sai-elevator-logo.jpg" type="image/x-icon">
@@ -21,10 +21,10 @@
     {
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
-      "name": "SRI SAI ELEVATOR",
+      "name": "SRI SAI ELEVATORS",
       "url": "https://srisaielevator.com",
       "logo": "https://srisaielevator.com/img/logo/sri-sai-elevator-logo.jpg",
-      "description": "SRI SAI ELEVATOR offers safe, reliable, and innovative elevator solutions tailored to meet client needs. We specialize in passenger, hospital, and goods elevators with advanced safety features.",
+      "description": "SRI SAI ELEVATORS offers safe, reliable, and innovative elevator solutions tailored to meet client needs. We specialize in passenger, hospital, and goods elevators with advanced safety features.",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "2-201/5A, C M T Road, Revenue Ward No 2",
@@ -93,7 +93,7 @@ class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0"
 >
 <!-- Logo -->
 <a href="index.html" class="navbar-brand d-flex align-items-center px-lg-5">
-  <img src="img/logo/sri-sai-elevator-logo.jpg" alt="SRI SAI ELEVATOR Logo" class="img-fluid" style="max-height: 72px;">
+  <img src="img/logo/sri-sai-elevator-logo.jpg" alt="SRI SAI ELEVATORS Logo" class="img-fluid" style="max-height: 72px;">
 </a>
 
 <!-- Toggler Button -->
@@ -132,7 +132,7 @@ class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0"
 
 <!-- WhatsApp Floating Button -->
 <a
-href="https://api.whatsapp.com/send?phone=918688968553&text=Hello SRI SAI ELEVATOR, I need more information."
+href="https://api.whatsapp.com/send?phone=918688968553&text=Hello SRI SAI ELEVATORS, I need more information."
 class="whatsapp"
 aria-label="WhatsApp us"
 >
@@ -504,42 +504,42 @@ aria-label="Make a direct call"
           <div class="row g-2 pt-2">
             <div class="col-4">
               <img
-                class="img-fluid bg-light p-1"
+                class="img-fluid bg-light "
                 src="img/gallery/passenger-elevator.jpeg"
                 alt="Passenger Elevator"
               />
             </div>
             <div class="col-4">
               <img
-                class="img-fluid bg-light p-1"
+                class="img-fluid bg-light "
                 src="img/gallery/hospital-elevator.jpeg"
                 alt="Hospital Elevator"
               />
             </div>
             <div class="col-4">
               <img
-                class="img-fluid bg-light p-1"
+                class="img-fluid bg-light "
                 src="img/gallery/goods-elevator.jpeg"
                 alt="Goods Elevator"
               />
             </div>
             <div class="col-4">
               <img
-                class="img-fluid bg-light p-1"
+                class="img-fluid bg-light"
                 src="img/gallery/safety-features.jpeg"
                 alt="Safety Features"
               />
             </div>
             <div class="col-4">
               <img
-                class="img-fluid bg-light p-1"
+                class="img-fluid bg-light"
                 src="img/gallery/design-options.jpeg"
                 alt="Design Options"
               />
             </div>
             <div class="col-4">
               <img
-                class="img-fluid bg-light p-1"
+                class="img-fluid bg-light"
                 src="img/gallery/installation.jpeg"
                 alt="Elevator Installation"
               />
@@ -575,7 +575,7 @@ aria-label="Make a direct call"
       <div class="copyright">
         <div class="row">
           <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-            &copy; <a class="border-bottom" href="#">SRI SAI ELEVATOR</a>, All Rights Reserved.
+            &copy; <a class="border-bottom" href="#">SRI SAI ELEVATORS</a>, All Rights Reserved.
             Designed By
             <a class="border-bottom" href="https://www.instagram.com/nani_500411/">nani_500411</a>
           </div>
