--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 
     <!-- Character Encoding and Viewport -->
     <meta charset="utf-8" />
-    <title>SRI SAI ELEVATOR - Safe and Reliable Elevator Solutions</title>
+    <title>SRI SAI ELEVATORS - Safe and Reliable ELEVATORS Solutions</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
     <!-- Meta Keywords and Description -->
@@ -21,10 +21,10 @@
     {
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
-      "name": "SRI SAI ELEVATOR",
+      "name": "SRI SAI ELEVATORS",
       "url": "https://srisaielevator.com",
       "logo": "https://srisaielevator.com/img/logo/sri-sai-elevator-logo.jpg",
-      "description": "SRI SAI ELEVATOR offers safe, reliable, and innovative elevator solutions tailored to meet client needs. We specialize in passenger, hospital, and goods elevators with advanced safety features.",
+      "description": "SRI SAI ELEVATORS offers safe, reliable, and innovative elevator solutions tailored to meet client needs. We specialize in passenger, hospital, and goods elevators with advanced safety features.",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "2-201/5A, C M T Road, Revenue Ward No 2",
@@ -93,7 +93,7 @@ class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0"
 >
 <!-- Logo -->
 <a href="index.html" class="navbar-brand d-flex align-items-center px-lg-5">
-  <img src="img/logo/sri-sai-elevator-logo.jpg" alt="SRI SAI ELEVATOR Logo" class="img-fluid" style="max-height: 72px;">
+  <img src="img/logo/sri-sai-elevator-logo.jpg" alt="SRI SAI ELEVATORS Logo" class="img-fluid" style="max-height: 72px;">
 </a>
 
 <!-- Toggler Button -->
@@ -143,14 +143,14 @@ class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0"
   <div class="container">
     <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
       <h6 class="section-title bg-white text-center text-primary px-3">Contact Us</h6>
-      <h1 class="mb-5">Get in Touch with SRI SAI ELEVATOR</h1>
+      <h1 class="mb-5">Get in Touch with SRI SAI ELEVATORS</h1>
     </div>
     <div class="row g-4">
       <!-- Contact Information -->
       <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
         <h5>Get In Touch</h5>
         <p class="mb-4">
-          We provide comprehensive vertical and horizontal movement solutions like elevators, combining perfect raw materials and intelligently researched smart-advanced technology. This ensures our commitment to offer the highest safety standards, total reliability, and quality.
+          We provide comprehensive vertical and horizontal movement solutions like ELEVATORS, combining perfect raw materials and intelligently researched smart-advanced technology. This ensures our commitment to offer the highest safety standards, total reliability, and quality.
         </p>
         <div class="d-flex align-items-center mb-3">
           <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary" style="width: 50px; height: 50px;">
@@ -222,7 +222,7 @@ class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0"
 
 <!-- WhatsApp Floating Button -->
 <a
-href="https://api.whatsapp.com/send?phone=918688968553&text=Hello SRI SAI ELEVATOR, I need more information."
+href="https://api.whatsapp.com/send?phone=918688968553&text=Hello SRI SAI ELEVATORS, I need more information."
 class="whatsapp"
 aria-label="WhatsApp us"
 >
@@ -281,52 +281,52 @@ aria-label="Make a direct call"
  
        <!-- Gallery -->
        <div class="col-lg-3 col-md-6">
-         <h4 class="text-white mb-3">Gallery</h4>
-         <div class="row g-2 pt-2">
-           <div class="col-4">
-             <img
-               class="img-fluid bg-light p-1"
-               src="img/gallery/passenger-elevator.jpeg"
-               alt="Passenger Elevator"
-             />
-           </div>
-           <div class="col-4">
-             <img
-               class="img-fluid bg-light p-1"
-               src="img/gallery/hospital-elevator.jpeg"
-               alt="Hospital Elevator"
-             />
-           </div>
-           <div class="col-4">
-             <img
-               class="img-fluid bg-light p-1"
-               src="img/gallery/goods-elevator.jpeg"
-               alt="Goods Elevator"
-             />
-           </div>
-           <div class="col-4">
-             <img
-               class="img-fluid bg-light p-1"
-               src="img/gallery/safety-features.jpeg"
-               alt="Safety Features"
-             />
-           </div>
-           <div class="col-4">
-             <img
-               class="img-fluid bg-light p-1"
-               src="img/gallery/design-options.jpeg"
-               alt="Design Options"
-             />
-           </div>
-           <div class="col-4">
-             <img
-               class="img-fluid bg-light p-1"
-               src="img/gallery/installation.jpeg"
-               alt="Elevator Installation"
-             />
-           </div>
-         </div>
-       </div>
+        <h4 class="text-white mb-3">Gallery</h4>
+        <div class="row g-2 pt-2">
+          <div class="col-4">
+            <img
+              class="img-fluid bg-light "
+              src="img/gallery/passenger-elevator.jpeg"
+              alt="Passenger Elevator"
+            />
+          </div>
+          <div class="col-4">
+            <img
+              class="img-fluid bg-light "
+              src="img/gallery/hospital-elevator.jpeg"
+              alt="Hospital Elevator"
+            />
+          </div>
+          <div class="col-4">
+            <img
+              class="img-fluid bg-light "
+              src="img/gallery/goods-elevator.jpeg"
+              alt="Goods Elevator"
+            />
+          </div>
+          <div class="col-4">
+            <img
+              class="img-fluid bg-light"
+              src="img/gallery/safety-features.jpeg"
+              alt="Safety Features"
+            />
+          </div>
+          <div class="col-4">
+            <img
+              class="img-fluid bg-light"
+              src="img/gallery/design-options.jpeg"
+              alt="Design Options"
+            />
+          </div>
+          <div class="col-4">
+            <img
+              class="img-fluid bg-light"
+              src="img/gallery/installation.jpeg"
+              alt="Elevator Installation"
+            />
+          </div>
+        </div>
+      </div>
  
        <!-- Additional Column (Optional) -->
        <div class="col-lg-3 col-md-6">
@@ -356,7 +356,7 @@ aria-label="Make a direct call"
      <div class="copyright">
        <div class="row">
          <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-           &copy; <a class="border-bottom" href="#">SRI SAI ELEVATOR</a>, All Rights Reserved.
+           &copy; <a class="border-bottom" href="#">SRI SAI ELEVATORS</a>, All Rights Reserved.
            Designed By
            <a class="border-bottom" href="https://www.instagram.com/nani_500411/">nani_500411</a>
          </div>
