--- a/about.html
+++ b/about.html
@@ -6,12 +6,12 @@
 
     <!-- Character Encoding and Viewport -->
     <meta charset="utf-8" />
-    <title>SRI SAI ELEVATOR - Safe and Reliable Elevator Solutions</title>
+    <title>SRI SAI ELEVATORS - Safe and Reliable Elevator Solutions</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
     <!-- Meta Keywords and Description -->
     <meta content="elevator solutions, hospital elevators, goods elevators, passenger elevators, elevator safety features, custom elevator designs, elevator installation, elevator maintenance, Chittoor elevators" name="keywords" />
-    <meta content="SRI SAI ELEVATOR provides comprehensive vertical movement solutions with advanced safety features and custom designs. We specialize in passenger, hospital, and goods elevators." name="description" />
+    <meta content="SRI SAI ELEVATORs provides comprehensive vertical movement solutions with advanced safety features and custom designs. We specialize in passenger, hospital, and goods elevators." name="description" />
 
     <!-- Favicon -->
     <link rel="icon" href="img/logo/sri-sai-elevator-logo.jpg" type="image/x-icon">
@@ -21,7 +21,7 @@
     {
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
-      "name": "SRI SAI ELEVATOR",
+      "name": "SRI SAI ELEVATORs",
       "url": "https://srisaielevator.com",
       "logo": "https://srisaielevator.com/img/logo/sri-sai-elevator-logo.jpg",
       "description": "SRI SAI ELEVATOR offers safe, reliable, and innovative elevator solutions tailored to meet client needs. We specialize in passenger, hospital, and goods elevators with advanced safety features.",
@@ -132,7 +132,7 @@ class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0"
 
  <!-- WhatsApp Floating Button -->
 <a
-href="https://api.whatsapp.com/send?phone=918688968553&text=Hello SRI SAI ELEVATOR, I need more information."
+href="https://api.whatsapp.com/send?phone=918688968553&text=Hello SRI SAI ELEVATORS, I need more information."
 class="whatsapp"
 aria-label="WhatsApp us"
 >
@@ -177,12 +177,12 @@ aria-label="Make a direct call"
 
       <!-- Content Section -->
       <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-        <h2 class="mb-4">Welcome to SRI SAI ELEVATOR</h2>
+        <h2 class="mb-4">Welcome to SRI SAI ELEVATORS</h2>
         <p class="mb-4">
           We are a leading provider of comprehensive vertical movement solutions, offering innovative and reliable elevator systems tailored to meet your needs.
         </p>
         <p class="mb-4">
-          At **SRI SAI ELEVATOR**, we combine perfect raw materials with advanced smart technology to ensure the highest safety standards, total reliability, and unmatched quality. Our elevators are designed to meet customized requirements and undergo rigorous inspections at every production stage. From sourcing raw materials from reputed brands to delivering on-time installations, we prioritize customer satisfaction at every step.
+          At **SRI SAI ELEVATORS**, we combine perfect raw materials with advanced smart technology to ensure the highest safety standards, total reliability, and unmatched quality. Our elevators are designed to meet customized requirements and undergo rigorous inspections at every production stage. From sourcing raw materials from reputed brands to delivering on-time installations, we prioritize customer satisfaction at every step.
         </p>
         <p class="mb-4">
           Our commitment to innovation and excellence ensures that we stay ahead in the industry. Whether it's passenger elevators, hospital elevators, or goods elevators, we deliver solutions that are energy-efficient, durable, and aesthetically pleasing. With a focus on customer feedback and continuous improvement, we strive to exceed expectations.
@@ -227,7 +227,7 @@ aria-label="Make a direct call"
 
     
    <!-- Service Start  why choose our travels-->
-   <h2 class="mb-4 text-center">Why Choose SRI SAI ELEVATOR</h2>
+   <h2 class="mb-4 text-center">Why Choose SRI SAI ELEVATORS</h2>
    <div class="container-fluid py-5">
      <div class="container">
        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
@@ -363,7 +363,7 @@ aria-label="Make a direct call"
         <h5 class="mb-0">Sai Bhargav</h5>
         <div class="testimonial-text bg-light text-center p-4">
           <p class="mb-0">
-            "We recently installed a passenger elevator from **SRI SAI ELEVATOR** in our office building. The team was professional, and the installation was completed on time. The safety features and smooth operation exceeded our expectations. Highly recommended!"
+            "We recently installed a passenger elevator from **SRI SAI ELEVATORS** in our office building. The team was professional, and the installation was completed on time. The safety features and smooth operation exceeded our expectations. Highly recommended!"
           </p>
         </div>
       </div>
@@ -373,7 +373,7 @@ aria-label="Make a direct call"
         <h5 class="mb-0">jeevitha Reddy</h5>
         <div class="testimonial-text bg-light text-center p-4">
           <p class="mb-0">
-            "As a hospital administrator, I needed a reliable and safe elevator for transporting patients. **SRI SAI ELEVATOR** delivered exactly what we needed. The micro-leveling and voice announcement features are impressive. Their after-sales support is commendable."
+            "As a hospital administrator, I needed a reliable and safe elevator for transporting patients. **SRI SAI ELEVATORS** delivered exactly what we needed. The micro-leveling and voice announcement features are impressive. Their after-sales support is commendable."
           </p>
         </div>
       </div>
@@ -383,7 +383,7 @@ aria-label="Make a direct call"
         <h5 class="mb-0">M Surendra</h5>
         <div class="testimonial-text bg-light text-center p-4">
           <p class="mb-0">
-            "We opted for a goods elevator for our warehouse, and it has been a game-changer. The design met our requirements perfectly, and the energy-saving mode is a bonus. The team at **SRI SAI ELEVATOR** is highly knowledgeable and supportive."
+            "We opted for a goods elevator for our warehouse, and it has been a game-changer. The design met our requirements perfectly, and the energy-saving mode is a bonus. The team at **SRI SAI ELEVATORS** is highly knowledgeable and supportive."
           </p>
         </div>
       </div>
@@ -393,7 +393,7 @@ aria-label="Make a direct call"
         <h5 class="mb-0">Yuvaraj</h5>
         <div class="testimonial-text bg-light text-center p-4">
           <p class="mb-0">
-            "The stainless steel finish of our new elevator looks stunning, and the automatic rescue device (ARD) gives us peace of mind. **SRI SAI ELEVATOR** truly delivers on quality and safety. Thank you for your excellent service!"
+            "The stainless steel finish of our new elevator looks stunning, and the automatic rescue device (ARD) gives us peace of mind. **SRI SAI ELEVATORS** truly delivers on quality and safety. Thank you for your excellent service!"
           </p>
         </div>
       </div>
@@ -403,7 +403,7 @@ aria-label="Make a direct call"
         <h5 class="mb-0">Mahesh Sharma</h5>
         <div class="testimonial-text bg-light text-center p-4">
           <p class="mb-0">
-            "We installed a home elevator from **SRI SAI ELEVATOR**, and it has made life so much easier for my family. The compact design fits perfectly in our home, and the smooth operation is impressive. Their team was courteous and professional throughout the process."
+            "We installed a home elevator from **SRI SAI ELEVATORS**, and it has made life so much easier for my family. The compact design fits perfectly in our home, and the smooth operation is impressive. Their team was courteous and professional throughout the process."
           </p>
         </div>
       </div>
@@ -413,7 +413,7 @@ aria-label="Make a direct call"
         <h5 class="mb-0">Kumaran</h5>
         <div class="testimonial-text bg-light text-center p-4">
           <p class="mb-0">
-            "I chose **SRI SAI ELEVATOR** for a hydraulic elevator in my low-rise commercial building. The durability and reliability of the system are unmatched. Their team provided excellent guidance and ensured timely delivery and installation."
+            "I chose **SRI SAI ELEVATORS** for a hydraulic elevator in my low-rise commercial building. The durability and reliability of the system are unmatched. Their team provided excellent guidance and ensured timely delivery and installation."
           </p>
         </div>
       </div>
@@ -423,7 +423,7 @@ aria-label="Make a direct call"
         <h5 class="mb-0">Anjali M</h5>
         <div class="testimonial-text bg-light text-center p-4">
           <p class="mb-0">
-            "The customization options offered by **SRI SAI ELEVATOR** are incredible. We went with a rose gold finish for our office elevator, and it looks absolutely stunning. The entire process, from consultation to installation, was seamless."
+            "The customization options offered by **SRI SAI ELEVATORS** are incredible. We went with a rose gold finish for our office elevator, and it looks absolutely stunning. The entire process, from consultation to installation, was seamless."
           </p>
         </div>
       </div>
@@ -433,7 +433,7 @@ aria-label="Make a direct call"
         <h5 class="mb-0">Ravi Kumar</h5>
         <div class="testimonial-text bg-light text-center p-4">
           <p class="mb-0">
-            "We needed an elevator for our industrial setup, and **SRI SAI ELEVATOR** delivered a robust solution. The high load capacity and durable construction have been perfect for our needs. Their customer service is top-notch!"
+            "We needed an elevator for our industrial setup, and **SRI SAI ELEVATORS** delivered a robust solution. The high load capacity and durable construction have been perfect for our needs. Their customer service is top-notch!"
           </p>
         </div>
       </div>
@@ -491,54 +491,54 @@ aria-label="Make a direct call"
           </div> -->
         </div>
   
-        <!-- Gallery -->
-        <div class="col-lg-3 col-md-6">
-          <h4 class="text-white mb-3">Gallery</h4>
-          <div class="row g-2 pt-2">
-            <div class="col-4">
-              <img
-                class="img-fluid bg-light p-1"
-                src="img/gallery/passenger-elevator.jpeg"
-                alt="Passenger Elevator"
-              />
-            </div>
-            <div class="col-4">
-              <img
-                class="img-fluid bg-light p-1"
-                src="img/gallery/hospital-elevator.jpeg"
-                alt="Hospital Elevator"
-              />
-            </div>
-            <div class="col-4">
-              <img
-                class="img-fluid bg-light p-1"
-                src="img/gallery/goods-elevator.jpeg"
-                alt="Goods Elevator"
-              />
-            </div>
-            <div class="col-4">
-              <img
-                class="img-fluid bg-light p-1"
-                src="img/gallery/safety-features.jpeg"
-                alt="Safety Features"
-              />
-            </div>
-            <div class="col-4">
-              <img
-                class="img-fluid bg-light p-1"
-                src="img/gallery/design-options.jpeg"
-                alt="Design Options"
-              />
-            </div>
-            <div class="col-4">
-              <img
-                class="img-fluid bg-light p-1"
-                src="img/gallery/installation.jpeg"
-                alt="Elevator Installation"
-              />
-            </div>
+       <!-- Gallery -->
+       <div class="col-lg-3 col-md-6">
+        <h4 class="text-white mb-3">Gallery</h4>
+        <div class="row g-2 pt-2">
+          <div class="col-4">
+            <img
+              class="img-fluid bg-light "
+              src="img/gallery/passenger-elevator.jpeg"
+              alt="Passenger Elevator"
+            />
+          </div>
+          <div class="col-4">
+            <img
+              class="img-fluid bg-light "
+              src="img/gallery/hospital-elevator.jpeg"
+              alt="Hospital Elevator"
+            />
+          </div>
+          <div class="col-4">
+            <img
+              class="img-fluid bg-light "
+              src="img/gallery/goods-elevator.jpeg"
+              alt="Goods Elevator"
+            />
+          </div>
+          <div class="col-4">
+            <img
+              class="img-fluid bg-light"
+              src="img/gallery/safety-features.jpeg"
+              alt="Safety Features"
+            />
+          </div>
+          <div class="col-4">
+            <img
+              class="img-fluid bg-light"
+              src="img/gallery/design-options.jpeg"
+              alt="Design Options"
+            />
+          </div>
+          <div class="col-4">
+            <img
+              class="img-fluid bg-light"
+              src="img/gallery/installation.jpeg"
+              alt="Elevator Installation"
+            />
           </div>
         </div>
+      </div>
   
         <!-- Additional Column (Optional) -->
         <div class="col-lg-3 col-md-6">
@@ -568,7 +568,7 @@ aria-label="Make a direct call"
       <div class="copyright">
         <div class="row">
           <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-            &copy; <a class="border-bottom" href="#">SRI SAI ELEVATOR</a>, All Rights Reserved.
+            &copy; <a class="border-bottom" href="#">SRI SAI ELEVATORS</a>, All Rights Reserved.
             Designed By
             <a class="border-bottom" href="https://www.instagram.com/nani_500411/">nani_500411</a>
           </div>
