--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 
     <!-- Character Encoding and Viewport -->
     <meta charset="utf-8" />
-    <title>SRI SAI ELEVATOR - Safe and Reliable Elevator Solutions</title>
+    <title>SRI SAI ELEVATORS - Safe and Reliable Elevator Solutions</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
     <!-- Meta Keywords and Description -->
     <meta content="elevator solutions, hospital elevators, goods elevators, passenger elevators, elevator safety features, custom elevator designs, elevator installation, elevator maintenance, Chittoor elevators" name="keywords" />
-    <meta content="SRI SAI ELEVATOR provides comprehensive vertical movement solutions with advanced safety features and custom designs. We specialize in passenger, hospital, and goods elevators." name="description" />
+    <meta content="SRI SAI ELEVATORS provides comprehensive vertical movement solutions with advanced safety features and custom designs. We specialize in passenger, hospital, and goods elevators." name="description" />
 
     <!-- Favicon -->
     <link rel="icon" href="img/logo/sri-sai-elevator-logo.jpg" type="image/x-icon">
@@ -21,10 +21,10 @@
     {
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
-      "name": "SRI SAI ELEVATOR",
+      "name": "SRI SAI ELEVATORS",
       "url": "https://srisaielevator.com",
       "logo": "https://srisaielevator.com/img/logo/sri-sai-elevator-logo.jpg",
-      "description": "SRI SAI ELEVATOR offers safe, reliable, and innovative elevator solutions tailored to meet client needs. We specialize in passenger, hospital, and goods elevators with advanced safety features.",
+      "description": "SRI SAI ELEVATORS offers safe, reliable, and innovative elevator solutions tailored to meet client needs. We specialize in passenger, hospital, and goods elevators with advanced safety features.",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "2-201/5A, C M T Road, Revenue Ward No 2",
@@ -93,7 +93,7 @@ class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0"
 >
 <!-- Logo -->
 <a href="index.html" class="navbar-brand d-flex align-items-center  px-lg-5">
-  <img src="img/logo/sri-sai-elevator-logo.jpg" alt="SRI SAI ELEVATOR Logo" class="img-fluid" style="max-height: 72px;">
+  <img src="img/logo/sri-sai-elevator-logo.jpg" alt="SRI SAI ELEVATORS Logo" class="img-fluid" style="max-height: 72px;">
 </a>
 
 <!-- Toggler Button -->
@@ -127,7 +127,7 @@ class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0"
 
 <!-- WhatsApp Floating Button -->
 <a
-href="https://api.whatsapp.com/send?phone=918688968553&text=Hello SRI SAI ELEVATOR, I need more information."
+href="https://api.whatsapp.com/send?phone=918688968553&text=Hello SRI SAI ELEVATORS, I need more information."
 class="whatsapp"
 aria-label="WhatsApp us"
 >
@@ -155,7 +155,7 @@ aria-label="Make a direct call"
     <div class="owl-carousel-item position-relative">
       <img
         src="img/elevator-banner-1.jpeg"
-        alt="SRI SAI ELEVATOR - Safe and Reliable Solutions"
+        alt="SRI SAI ELEVATORS - Safe and Reliable Solutions"
         class="d-block w-100"
         style="object-fit: cover; height: 700px;"
       />
@@ -167,13 +167,13 @@ aria-label="Make a direct call"
           <div class="row justify-content-lg-start justify-content-center">
             <div class="col-sm-10 col-lg-8">
               <h1 class="display-3 text-white animated fadeInUp" style="color: #ffffff;">
-                Elevate Your Experience,
+                Transform Your Journey,
               </h1>
               <h5 class="text-uppercase mb-3 animated fadeInUp delay-1s" style="color: #ffffff;">
                 With Advanced Safety Features
               </h5>
               <p class="fs-5 text-white mb-4 pb-2 animated fadeInUp delay-2s" style="color: #dfd4ce;">
-                At SRI SAI ELEVATOR, we provide comprehensive vertical movement solutions with the highest safety standards and innovative technology.
+                At SRI SAI ELEVATORS, we provide comprehensive vertical movement solutions with the highest safety standards and innovative technology.
               </p>
               <a
                 href="contact.html"
@@ -197,7 +197,7 @@ aria-label="Make a direct call"
     <div class="owl-carousel-item position-relative">
       <img
         src="img/elevator-banner-2.jpeg"
-        alt="SRI SAI ELEVATOR - Customized Designs"
+        alt="SRI SAI ELEVATORS - Customized Designs"
         class="d-block w-100"
         style="object-fit: cover; height: 700px;"
       />
@@ -209,13 +209,13 @@ aria-label="Make a direct call"
           <div class="row justify-content-lg-start justify-content-center">
             <div class="col-sm-10 col-lg-8">
               <h1 class="display-3 text-white animated fadeInUp" style="color: #ffffff;">
-                Tailored Elevator Solutions
+                Elevator Solutions for Every Need
               </h1>
               <h5 class="text-uppercase mb-3 animated fadeInUp delay-1s" style="color: #ffffff;">
-                Designed to Meet Your Needs
+                Designed to Meet Your Requirements
               </h5>
               <p class="fs-5 text-white mb-4 pb-2 animated fadeInUp delay-2s" style="color: #dfd4ce;">
-                From passenger elevators to hospital and goods lifts, we offer customized designs with rigorous quality checks at every stage.
+                From passenger elevators to hospital and goods lifts, we provide customized designs with rigorous quality checks at every stage.
               </p>
               <a
                 href="contact.html"
@@ -620,7 +620,7 @@ aria-label="Make a direct call"
               <img
                 class="img-fluid position-absolute w-100 h-100"
                 src="img/elevator/about-us.jpg"
-                alt="SRI SAI ELEVATOR"
+                alt="SRI SAI ELEVATORS"
                 
               />
             </div>
@@ -628,12 +628,12 @@ aria-label="Make a direct call"
     
           <!-- Content Section -->
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-            <h2 class="mb-4">Welcome to SRI SAI ELEVATOR</h2>
+            <h2 class="mb-4">Welcome to SRI SAI ELEVATORS</h2>
             <p class="mb-4">
               We are a leading provider of comprehensive vertical movement solutions, offering innovative and reliable elevator systems tailored to meet your needs.
             </p>
             <p class="mb-4">
-              At SRI SAI ELEVATOR, we combine perfect raw materials with advanced smart technology to ensure the highest safety standards, total reliability, and unmatched quality. Our elevators are designed to meet customized requirements and undergo rigorous inspections at every production stage.
+              At SRI SAI ELEVATORS, we combine perfect raw materials with advanced smart technology to ensure the highest safety standards, total reliability, and unmatched quality. Our elevators are designed to meet customized requirements and undergo rigorous inspections at every production stage.
             </p>
             <div class="row gy-2 gx-4 mb-4">
               <div class="col-sm-6">
@@ -676,7 +676,7 @@ aria-label="Make a direct call"
 
 
      <!-- Service Start  why choose our travels-->
-     <h2 class="mb-4 text-center">Why Choose SRI SAI ELEVATOR</h2>
+     <h2 class="mb-4 text-center">Why Choose SRI SAI ELEVATORS</h2>
 <div class="container-fluid py-5">
   <div class="container">
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
@@ -796,7 +796,7 @@ aria-label="Make a direct call"
         <h5 class="mb-0">Sai Bhargav</h5>
         <div class="testimonial-text bg-light text-center p-4">
           <p class="mb-0">
-            "We recently installed a passenger elevator from **SRI SAI ELEVATOR** in our office building. The team was professional, and the installation was completed on time. The safety features and smooth operation exceeded our expectations. Highly recommended!"
+            "We recently installed a passenger elevator from **SRI SAI ELEVATORS** in our office building. The team was professional, and the installation was completed on time. The safety features and smooth operation exceeded our expectations. Highly recommended!"
           </p>
         </div>
       </div>
@@ -806,7 +806,7 @@ aria-label="Make a direct call"
         <h5 class="mb-0">jeevitha Reddy</h5>
         <div class="testimonial-text bg-light text-center p-4">
           <p class="mb-0">
-            "As a hospital administrator, I needed a reliable and safe elevator for transporting patients. **SRI SAI ELEVATOR** delivered exactly what we needed. The micro-leveling and voice announcement features are impressive. Their after-sales support is commendable."
+            "As a hospital administrator, I needed a reliable and safe elevator for transporting patients. **SRI SAI ELEVATORS** delivered exactly what we needed. The micro-leveling and voice announcement features are impressive. Their after-sales support is commendable."
           </p>
         </div>
       </div>
@@ -816,7 +816,7 @@ aria-label="Make a direct call"
         <h5 class="mb-0">M Surendra</h5>
         <div class="testimonial-text bg-light text-center p-4">
           <p class="mb-0">
-            "We opted for a goods elevator for our warehouse, and it has been a game-changer. The design met our requirements perfectly, and the energy-saving mode is a bonus. The team at **SRI SAI ELEVATOR** is highly knowledgeable and supportive."
+            "We opted for a goods elevator for our warehouse, and it has been a game-changer. The design met our requirements perfectly, and the energy-saving mode is a bonus. The team at **SRI SAI ELEVATORS** is highly knowledgeable and supportive."
           </p>
         </div>
       </div>
@@ -826,7 +826,7 @@ aria-label="Make a direct call"
         <h5 class="mb-0">Yuvaraj</h5>
         <div class="testimonial-text bg-light text-center p-4">
           <p class="mb-0">
-            "The stainless steel finish of our new elevator looks stunning, and the automatic rescue device (ARD) gives us peace of mind. **SRI SAI ELEVATOR** truly delivers on quality and safety. Thank you for your excellent service!"
+            "The stainless steel finish of our new elevator looks stunning, and the automatic rescue device (ARD) gives us peace of mind. **SRI SAI ELEVATORS** truly delivers on quality and safety. Thank you for your excellent service!"
           </p>
         </div>
       </div>
@@ -836,7 +836,7 @@ aria-label="Make a direct call"
         <h5 class="mb-0">Mahesh Sharma</h5>
         <div class="testimonial-text bg-light text-center p-4">
           <p class="mb-0">
-            "We installed a home elevator from **SRI SAI ELEVATOR**, and it has made life so much easier for my family. The compact design fits perfectly in our home, and the smooth operation is impressive. Their team was courteous and professional throughout the process."
+            "We installed a home elevator from **SRI SAI ELEVATORS**, and it has made life so much easier for my family. The compact design fits perfectly in our home, and the smooth operation is impressive. Their team was courteous and professional throughout the process."
           </p>
         </div>
       </div>
@@ -846,7 +846,7 @@ aria-label="Make a direct call"
         <h5 class="mb-0">Kumaran</h5>
         <div class="testimonial-text bg-light text-center p-4">
           <p class="mb-0">
-            "I chose **SRI SAI ELEVATOR** for a hydraulic elevator in my low-rise commercial building. The durability and reliability of the system are unmatched. Their team provided excellent guidance and ensured timely delivery and installation."
+            "I chose **SRI SAI ELEVATORS** for a hydraulic elevator in my low-rise commercial building. The durability and reliability of the system are unmatched. Their team provided excellent guidance and ensured timely delivery and installation."
           </p>
         </div>
       </div>
@@ -856,7 +856,7 @@ aria-label="Make a direct call"
         <h5 class="mb-0">Anjali M</h5>
         <div class="testimonial-text bg-light text-center p-4">
           <p class="mb-0">
-            "The customization options offered by **SRI SAI ELEVATOR** are incredible. We went with a rose gold finish for our office elevator, and it looks absolutely stunning. The entire process, from consultation to installation, was seamless."
+            "The customization options offered by **SRI SAI ELEVATORS** are incredible. We went with a rose gold finish for our office elevator, and it looks absolutely stunning. The entire process, from consultation to installation, was seamless."
           </p>
         </div>
       </div>
@@ -866,7 +866,7 @@ aria-label="Make a direct call"
         <h5 class="mb-0">Ravi Kumar</h5>
         <div class="testimonial-text bg-light text-center p-4">
           <p class="mb-0">
-            "We needed an elevator for our industrial setup, and **SRI SAI ELEVATOR** delivered a robust solution. The high load capacity and durable construction have been perfect for our needs. Their customer service is top-notch!"
+            "We needed an elevator for our industrial setup, and **SRI SAI ELEVATORS** delivered a robust solution. The high load capacity and durable construction have been perfect for our needs. Their customer service is top-notch!"
           </p>
         </div>
       </div>
@@ -921,42 +921,42 @@ aria-label="Make a direct call"
           <div class="row g-2 pt-2">
             <div class="col-4">
               <img
-                class="img-fluid bg-light p-1"
+                class="img-fluid bg-light "
                 src="img/gallery/passenger-elevator.jpeg"
                 alt="Passenger Elevator"
               />
             </div>
             <div class="col-4">
               <img
-                class="img-fluid bg-light p-1"
+                class="img-fluid bg-light "
                 src="img/gallery/hospital-elevator.jpeg"
                 alt="Hospital Elevator"
               />
             </div>
             <div class="col-4">
               <img
-                class="img-fluid bg-light p-1"
+                class="img-fluid bg-light "
                 src="img/gallery/goods-elevator.jpeg"
                 alt="Goods Elevator"
               />
             </div>
             <div class="col-4">
               <img
-                class="img-fluid bg-light p-1"
+                class="img-fluid bg-light"
                 src="img/gallery/safety-features.jpeg"
                 alt="Safety Features"
               />
             </div>
             <div class="col-4">
               <img
-                class="img-fluid bg-light p-1"
+                class="img-fluid bg-light"
                 src="img/gallery/design-options.jpeg"
                 alt="Design Options"
               />
             </div>
             <div class="col-4">
               <img
-                class="img-fluid bg-light p-1"
+                class="img-fluid bg-light"
                 src="img/gallery/installation.jpeg"
                 alt="Elevator Installation"
               />
@@ -992,7 +992,7 @@ aria-label="Make a direct call"
       <div class="copyright">
         <div class="row">
           <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-            &copy; <a class="border-bottom" href="#">SRI SAI ELEVATOR</a>, All Rights Reserved.
+            &copy; <a class="border-bottom" href="#">SRI SAI ELEVATORS</a>, All Rights Reserved.
             Designed By
             <a class="border-bottom" href="https://www.instagram.com/nani_500411/">nani_500411</a>
           </div>
