--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
       },
       "contactPoint": {
         "@type": "ContactPoint",
-        "telephone": "+91-8688968553",
+        "telephone": "+91-9912226111",
         "contactType": "Customer Service",
         "areaServed": "IN",
         "availableLanguage": ["en", "te"]
@@ -132,7 +132,7 @@ class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0"
 
  <!-- WhatsApp Floating Button -->
 <a
-href="https://api.whatsapp.com/send?phone=918688968553&text=Hello SRI SAI ELEVATORS, I need more information."
+href="https://api.whatsapp.com/send?phone=919912226111&text=Hello SRI SAI ELEVATORS, I need more information."
 class="whatsapp"
 aria-label="WhatsApp us"
 >
@@ -141,7 +141,7 @@ aria-label="WhatsApp us"
 
 <!-- Direct Call Floating Button -->
 <a
-href="tel:+918688968553"
+href="tel:+919912226111"
 class="dialme"
 aria-label="Make a direct call"
 >
@@ -476,7 +476,7 @@ aria-label="Make a direct call"
           </p>
           <p class="mb-2">
             <i class="fa fa-phone-alt me-3"></i>
-            <a href="tel:+918688968553">+91 8688968553</a>
+            <a href="tel:+919912226111">+91 9912226111</a>
           </p>
           <p class="mb-2">
             <i class="fa fa-envelope me-3"></i>
@@ -491,54 +491,54 @@ aria-label="Make a direct call"
           </div> -->
         </div>
   
-       <!-- Gallery -->
-       <div class="col-lg-3 col-md-6">
-        <h4 class="text-white mb-3">Gallery</h4>
-        <div class="row g-2 pt-2">
-          <div class="col-4">
-            <img
-              class="img-fluid bg-light "
-              src="img/gallery/passenger-elevator.jpeg"
-              alt="Passenger Elevator"
-            />
+        <!-- Gallery -->
+        <!-- <div class="col-lg-3 col-md-6">
+          <h4 class="text-white mb-3">Gallery</h4>
+          <div class="row g-2 pt-2">
+            <div class="col-4">
+              <img
+                class="img-fluid bg-light "
+                src="img/gallery/passenger-elevator.jpeg"
+                alt="Passenger Elevator"
+              />
+            </div>
+            <div class="col-4">
+              <img
+                class="img-fluid bg-light "
+                src="img/gallery/hospital-elevator.jpeg"
+                alt="Hospital Elevator"
+              />
+            </div>
+            <div class="col-4">
+              <img
+                class="img-fluid bg-light "
+                src="img/gallery/goods-elevator.jpeg"
+                alt="Goods Elevator"
+              />
+            </div>
+            <div class="col-4">
+              <img
+                class="img-fluid bg-light"
+                src="img/gallery/safety-features.jpeg"
+                alt="Safety Features"
+              />
+            </div>
+            <div class="col-4">
+              <img
+                class="img-fluid bg-light"
+                src="img/gallery/design-options.jpeg"
+                alt="Design Options"
+              />
+            </div>
+            <div class="col-4">
+              <img
+                class="img-fluid bg-light"
+                src="img/gallery/installation.jpeg"
+                alt="Elevator Installation"
+              />
+            </div>
           </div>
-          <div class="col-4">
-            <img
-              class="img-fluid bg-light "
-              src="img/gallery/hospital-elevator.jpeg"
-              alt="Hospital Elevator"
-            />
-          </div>
-          <div class="col-4">
-            <img
-              class="img-fluid bg-light "
-              src="img/gallery/goods-elevator.jpeg"
-              alt="Goods Elevator"
-            />
-          </div>
-          <div class="col-4">
-            <img
-              class="img-fluid bg-light"
-              src="img/gallery/safety-features.jpeg"
-              alt="Safety Features"
-            />
-          </div>
-          <div class="col-4">
-            <img
-              class="img-fluid bg-light"
-              src="img/gallery/design-options.jpeg"
-              alt="Design Options"
-            />
-          </div>
-          <div class="col-4">
-            <img
-              class="img-fluid bg-light"
-              src="img/gallery/installation.jpeg"
-              alt="Elevator Installation"
-            />
-          </div>
-        </div>
-      </div>
+        </div> -->
   
         <!-- Additional Column (Optional) -->
         <div class="col-lg-3 col-md-6">
