--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@
               alt="SRI SAI ELEVATORS - Safe and Reliable Solutions"
               class="d-block w-100"
               style="object-fit: cover; height: 700px;"
-              loading="eager" <!-- Prioritize LCP image -->
-              width="1920" <!-- Add explicit dimensions -->
+              loading="eager" 
+              width="1920" 
               height="700"
-              fetchpriority="high" <!-- High priority for LCP image -->
+              fetchpriority="high" 
           />
           <div
               class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center"
@@ -228,8 +228,8 @@
               alt="SRI SAI ELEVATORS - Customized Designs"
               class="d-block w-100"
               style="object-fit: cover; height: 700px;"
-              loading="lazy" <!-- Lazy load non-LCP images -->
-              width="1920" <!-- Add explicit dimensions -->
+              loading="lazy" 
+              width="1920" 
               height="700"
           />
           <div
