--- a/index.html
+++ b/index.html
@@ -86,19 +86,31 @@
 
   <body>
     <!-- Spinner Start -->
-    <div
-        id="spinner"
-        class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center"
-    >
-        <div
-            class="spinner-border text-primary"
-            style="width: 3rem; height: 3rem"
-            role="status"
-        >
-            <span class="visually-hidden">Loading...</span> <!-- Improved accessibility -->
-        </div>
-    </div>
-    <!-- Spinner End -->
+<div
+id="spinner"
+class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center"
+style="z-index: 9999;" 
+>
+<div
+    class="spinner-border text-primary"
+    style="width: 3rem; height: 3rem;"
+    role="status"
+>
+    <span class="visually-hidden">Loading...</span> <!-- Improved accessibility -->
+</div>
+</div>
+<!-- Spinner End -->
+
+<!-- Remove Spinner After Page Load -->
+<script>
+document.addEventListener("DOMContentLoaded", function () {
+    // Hide spinner after the page has fully loaded
+    const spinner = document.getElementById('spinner');
+    if (spinner) {
+        spinner.style.display = 'none'; // Hide the spinner
+    }
+});
+</script>
 
     <!-- Navbar Start -->
     <nav
