--- a/index.html
+++ b/index.html
@@ -14,18 +14,23 @@
     <!-- Open Graph Tags for Social Media SEO -->
     <meta property="og:title" content="SRI SAI ELEVATORS - Safe and Reliable Elevator Solutions" />
     <meta property="og:description" content="SRI SAI ELEVATORS provides comprehensive vertical movement solutions with advanced safety features and custom designs." />
-    <meta property="og:image" content="https://srisaielevator.com/img/logo/sri-sai-elevator-logo.webp" />
-    <meta property="og:url" content="https://srisaielevator.com" />
+    <meta property="og:image" content="https://srisaielevators.com/img/logo/sri-sai-elevator-logo.webp" />
+    <meta property="og:url" content="https://srisaielevators.com" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter Card Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="SRI SAI ELEVATORS - Safe and Reliable Elevator Solutions" />
     <meta name="twitter:description" content="SRI SAI ELEVATORS provides comprehensive vertical movement solutions with advanced safety features and custom designs." />
-    <meta name="twitter:image" content="https://srisaielevator.com/img/logo/sri-sai-elevator-logo.webp" />
+    <meta name="twitter:image" content="https://srisaielevators.com/img/logo/sri-sai-elevator-logo.webp" />
 
     <!-- Favicon -->
     <link rel="icon" href="img/logo/sri-sai-elevator-logo.webp" type="image/webp">
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="shortcut icon" href="/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+<link rel="manifest" href="/site.webmanifest" />
 
     <!-- Schema Markup for Local Business -->
     <script type="application/ld+json">
@@ -33,8 +38,8 @@
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
       "name": "SRI SAI ELEVATORS",
-      "url": "https://srisaielevator.com",
-      "logo": "https://srisaielevator.com/img/logo/sri-sai-elevator-logo.webp",
+      "url": "https://srisaielevators.com",
+      "logo": "https://srisaielevators.com/img/logo/sri-sai-elevator-logo.webp",
       "description": "SRI SAI ELEVATORS offers safe, reliable, and innovative elevator solutions tailored to meet client needs.",
       "address": {
         "@type": "PostalAddress",
